# advent-of-code

./: .gitignore  Justfile  README.md  all.rb  bench  get
01/: p1.sh  p2.sh
02/: p1.pl
03/: p1.py  p2.py
04/: p1.c  p2.c
05/: p1.pl
06/: p1.rb
07/: p1.io
08/: p1.cpp
09/: p2.clj
1/: p1.hs  p1.tri  p2.cpp  p2.hs  p2.tri
1/1/: main.hs
1/2/: main.hs
10/: .gitignore  p1.hs  p1.kt  p1.tri  p2.hs  p2.kt
11/: manifest.toml  p1.hs  p1.scala  p1.tri  p2.hs  p2.scala  p2.tri
12/: p1-statet.hs  p1.hs  p1.tri  p2.hs  p2.tri
13/: p1.tri  p1.ts  p2.hs  p2.tri  p2.ts
14/: p1.hs  p1.tri  p1.zig  p2.tri  p2.zig  render.hs
15/: p1.hs  p1.ml  p1.tri  p2.hs  p2.ml  p2.tri
16/: day16.cabal  p1.go  p1.tri  p1bits.tri  p2-wrong.tri  p2.go  p2.hs  p2.tri
17/: p1.hs  p1.tri  p2.hs  p2.swift  p2.tri
18/: day18.cabal  p1.hs  p1.sql  p1.tri  p2.hs  p2.sql  p2.tri
19/: p1.hs  p1.tri  p2.hs  p2.rs
2/: p1.hs  p1.tri  p2.hs  p2.pl  p2.tri
20/: day20.cabal  p1.erl  p1.hs  p2.erl  p2.hs  p2.tri
2021/: .gitignore  README.md
2022/: README.md
2023/: README.md
2024/: README.md
2024/18/: solution.cabal
2025/: README.md
21/: p1.noul  p1.tri
22/: p1.ex  p1.hs  p1.tri  p2.ex  p2.hs  p2.tri
23/: p1.hs  p1.nim  p1.tri  p2.hs  p2.nim  p2.tri
24/: p1.cr  p1.hs  p2.cr  p2.hs  p2.tri
25/: p1.hs  p1.php  p1.tri
3/: p1.fish  p1.hs  p1.rb  p1.tri  p2.fish  p2.rb
4/: p1.hs  p2.hs  p2.pl  p2.tri
5/: p1.hs  p1.py  p1.tri  p2.hs  p2.tri
6/: p1.hs  p1.tri  p2.hs  p2.tri
7/: p1.hs  p1.tri  p2.hs
8/: p1.hs  p1.tri  p2.hs  p2.tri
9/: p1.hs  p1.tri
(+220 files in other folders)
