cabal-version:      3.0
name:               solution
version:            1.0.0
-- synopsis:
-- description:
license:            Unlicense
-- license-file:       LICENSE
author:             Cameron Eldridge
maintainer:         cameldridge@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O

executable p1
    import:           warnings
    main-is:          P1.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        containers ^>=0.7,
        mtl ^>=2.3.1,
        array ^>=0.5.7,
        heaps ^>=0.4.1,
        parsec ^>=3.1.17
    hs-source-dirs:   app
    default-language: GHC2024

executable p2
    import:           warnings
    main-is:          P2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        containers ^>=0.7,
        mtl ^>=2.3.1,
        array ^>=0.5.7,
        heaps ^>=0.4.1,
        parsec ^>=3.1.17
    hs-source-dirs:   app
    default-language: GHC2024
